k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: secure-app
  labels:
    app: secure-app

spec:
  # Reduced replicas for VirtualBox lab stability
  replicas: 5

  selector:
    matchLabels:
      app: secure-app

  template:
    metadata:
      labels:
        app: secure-app

    spec:
      imagePullSecrets:
        - name: ghcr-login-secret

      containers:
      - name: secure-app

        image: ghcr.io/ratchmartins/cop-450/secure-app:latest
        imagePullPolicy: Always

        ports:
        - containerPort: 5000

        readinessProbe:
          httpGet:
            path: /health
            port: 5000

          initialDelaySeconds: 10
          periodSeconds: 5
          failureThreshold: 3

        # -------------------------
        # LIVENESS PROBE
        # -------------------------
        livenessProbe:
          httpGet:
            path: /health
            port: 5000

          initialDelaySeconds: 20
          periodSeconds: 15
          failureThreshold: 3

        # -------------------------
        # RESOURCE LIMITS
        # -------------------------
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"

          limits:
            memory: "512Mi"
            cpu: "500m"
