k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: secure-app-service
spec:
  # ClusterIP is best for Nginx/Ingress setups
  type: ClusterIP
  selector:
    app: secure-app
  ports:
    - protocol: TCP
      port: 80         # This is what Ingress points to
      targetPort: 5000 # This is where your Flask app is listening
